[gd_scene load_steps=10 format=2]

[ext_resource path="res://game_screen/entities/player_tower.gd" type="Script" id=1]
[ext_resource path="res://assets/turrets.png" type="Texture" id=2]
[ext_resource path="res://util/state_label.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/ui.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 105.689

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.638, 15.039 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 0, 16, 8, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 0, 24, 8, 8 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[node name="PlayerTower" type="Node2D" groups=["PlayerTower"]]
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 1 )
range_color = Color( 0.239216, 0.407843, 0.117647, 0.12549 )

[node name="RangeArea" type="Area2D" parent="."]
collision_layer = 2

[node name="RangeShape" type="CollisionShape2D" parent="RangeArea"]
shape = SubResource( 1 )
disabled = true

[node name="BaseSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 64, 64 )

[node name="TowerContainer" type="Node2D" parent="."]

[node name="TowerSprite" type="Sprite" parent="TowerContainer"]
rotation = -1.5708
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 64, 64, 64, 64 )

[node name="Control" parent="." instance=ExtResource( 3 )]
margin_left = -5.82742
margin_top = -8.39322
margin_right = 31.1726
margin_bottom = 5.60678
rect_scale = Vector2( 0.33, 0.33 )

[node name="ClickArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
shape = SubResource( 2 )

[node name="PowerIndicator" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 25.7153, -16.7432 )
frames = SubResource( 5 )
frame = 1
playing = true

[connection signal="body_entered" from="RangeArea" to="." method="_on_RangeArea_body_entered"]
[connection signal="body_exited" from="RangeArea" to="." method="_on_RangeArea_body_exited"]
[connection signal="input_event" from="ClickArea" to="." method="_on_ClickArea_input_event"]
[connection signal="mouse_entered" from="ClickArea" to="." method="_on_ClickArea_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_ClickArea_mouse_exited"]
